--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do List</title>
+        <link href="app.css" rel="stylesheet" type="text/css">
+        <script src="main.js"></script>
     </head>
     <body>
         
