fixed tailwind config

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <script src="main.js"></script>
     </head>
     <body>
-        
+        <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex"></div>
     </body>
 </html>
