--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <script src="main.js"></script>
     </head>
     <body>
-        
+        <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex justify-center py-10">
+            <input type="text" class="w-4/5 h-16"></input>
+        </div>
     </body>
 </html>
