--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex justify-center py-10">
-            <input type="text" placeholder="Enter List Name..." class="w-4/5 h-16 text-lg outline-none pl-5"></input>
+        <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex items-center flex-col">
+            <input type="text" placeholder="Enter List Name..." class="w-4/5 h-16 text-lg outline-none ml-5 my-10"></input>
+            <div class="w-full bg-gray-300 h-14 text-2xl flex justify-center items-center hoover">Shopping</div>
+            <div class="w-full bg-gray-300 h-14 text-2xl flex justify-center items-center hoover">Schedule</div>
         </div>
     </body>
 </html>
