--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do List</title>
         <link href="app.css" rel="stylesheet" type="text/css">
-        <script src="main.js"></script>
+        <script defer src="main.js"></script>
     </head>
     <body>
         <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex items-center flex-col">
             <input type="text" placeholder="Enter List Name..." class="w-4/5 h-16 text-lg outline-none ml-5 my-10"></input>
-            <div class="w-full bg-gray-300 h-14 text-2xl flex justify-center items-center hoover">Shopping</div>
-            <div class="w-full bg-gray-300 h-14 text-2xl flex justify-center items-center hoover">Schedule</div>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Shopping</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
         </div>
     </body>
 </html>
