--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
         <link href="app.css" rel="stylesheet" type="text/css">
         <script defer src="main.js"></script>
     </head>
-    <body>
+    <body class="flex">
         <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex items-center flex-col">
-            <input type="text" placeholder="Enter List Name..." class="w-4/5 h-16 text-lg outline-none ml-5 my-10"></input>
+            <input type="text" placeholder="Create New List..." class="w-4/5 h-16 text-lg outline-none pl-5 my-10"></input>
             <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Shopping</button>
-            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
-            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
-            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
-            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schedule</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schasdfle</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schsule</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schewqe</button>
+            <button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Schthhle</button>
+        </div>
+        <div>
+            <div id="title" class="w-fit h-fit text-7xl border-b-2 border-black m-16 mt-10">asdfasdf</div>
         </div>
     </body>
 </html>
