--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
         <link href="app.css" rel="stylesheet" type="text/css">
         <script defer src="main.js"></script>
     </head>
-    <body>
+    <body class="flex flex-row">
         <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex items-center flex-col">
             <input type="text" placeholder="Enter List Name..." class="w-4/5 h-16 text-lg outline-none ml-5 my-10"></input>
-            <div class="w-full bg-gray-300 h-14 text-2xl flex justify-center items-center hoover">Shopping</div>
-            <div class="w-full bg-gray-300 h-14 text-2xl flex justify-center items-center hoover">Schedule</div>
+            <div id="mainLists" class="w-full h-fit">
+            </div>
+        </div>
+        <div>
+            <div id="current-list-name" class="w-fit h-fit text-7xl border-b-2 border-black ml-16 mt-10">asdfasdf</div>
+            <div id="current-list-todos">
+            </div>
         </div>
     </body>
 </html>
