--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
         <title>To-Do List</title>
         <link href="app.css" rel="stylesheet" type="text/css">
         <script defer src="main.js"></script>
+        <script src="https://kit.fontawesome.com/0d1d579ea0.js" crossorigin="anonymous"></script>
     </head>
     <body class="flex flex-row">
         <div class="bg-gray-200 w-3/12 h-screen border-r-gray-300 border-2 flex items-center flex-col">
-            <input type="text" placeholder="Create New List..." class="w-4/5 h-16 text-lg outline-none pl-5 my-10"></input>
+            <input type="text" id="userInput" placeholder="Create New List..." class="w-4/5 h-16 text-lg outline-none pl-5 my-10"></input>
             <div id="mainLists" class="w-full h-fit">
                 <ul class="list-group">
-                    <li class="list-group-item"><button id="0" class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center">Shopping List</button></li>
+                    <li class="list-group-item"><button id="${list.id}" class="list w-full bg-gray-300 h-14 text-2xl flex justify-around items-center">${list.name}<button class="trash"><i class="fa-solid fa-trash"></i></button></button></li>
                 </ul>
             </div>
         </div>
         <div>
-            <div id="current-list-name" class="w-fit h-fit text-7xl border-b-2 border-black ml-16 mt-10">asdfasdf</div>
+            <div id="current-list-name" class="w-fit h-fit text-7xl border-b-2 border-black ml-16 mt-10"></div>
             <div id="current-list-todos"></div>
         </div>
     </body>
