--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" id="userInput" placeholder="Create New List..." class="w-4/5 h-16 text-lg outline-none pl-5 my-10"></input>
             <div id="mainLists" class="w-full h-fit">
                 <ul class="list-group">
-                    <li class="list-group-item"><button id="${list.id}" class="list w-full bg-gray-300 h-14 text-2xl flex justify-around items-center">${list.name}<button class="trash"><i class="fa-solid fa-trash"></i></button></button></li>
+                    <li class="list-group-item"><button id="${list.id}" class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center px-10"><span class="relative">${list.name}</span><button id="${list.id}" class="trash relative left-full"><i class="fa-solid fa-trash"></i></button></button></li>
                 </ul>
             </div>
         </div>
