fixing selection functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" id="userInput" placeholder="Create New List..." class="w-4/5 h-16 text-lg outline-none pl-5 my-10"></input>
             <div id="mainLists" class="w-full h-fit">
                 <ul class="list-group">
-                    <li class="list-group-item"><button id="" class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center px-10"><span class="relative">${list.name}</span><button id="${list.id}" class="trash relative left-full"><i class="fa-solid fa-trash"></i></button></button></li>
+                    <li class="list-group-item"><button id="" class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center px-10"><span class="relative"></span><button id="" class="trash relative left-full"><i class="fa-solid fa-trash"></i></button></button></li>
                 </ul>
             </div>
         </div>
@@ -24,7 +24,7 @@
             <div class="bg-gray-300 rounded-b-lg" id="bottombox">
                 <div class="todo">
                 
-                  <input id="enter" type="text" placeholder="Add a task to do." class="my-3 rounded-lg w-1/4 te">  
+                  <input id="enter" type="text" placeholder="Add a task to do." class="my-3 rounded-lg w-1/4 te">
                 </div>
                 
             </div>
