added arrows and an edit icon for functinoality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="w-full">
-            <div id="current-list-name" class="w-2/5 h-fit border-b-2 border-black ml-16 mt-10"></div>
+            <div id="current-list-name" class="w-fit h-fit border-b-2 border-black ml-16 mt-10"></div>
             <div id="current-list-todos">
             </div>
             <div class="bg-gray-300 rounded-b-lg" id="bottombox">
