--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <div class="w-full">
             <div id="current-list-name" class="w-fit h-fit border-b-2 border-black ml-16 mt-10"></div>
             <div id="current-list-todos">
+                <ul class="list-group-flush">
+                    <li class="current-list-todos green"><input type="checkbox" class="check" value="checked"><span>${todo.text}</span><button class="editTodo"><i class="fa-solid fa-pen-to-square"></i></button> <input class="edit hide" type="text"><button class="delete hide">Delete</button></li>
+                </ul>
             </div>
             <div class="bg-gray-300 rounded-b-lg" id="bottombox">
                 <div class="todo">
