added a background image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </ul>
             </div>
         </div>
-        <div class="w-full">
+        <div class="w-full bg-no-repeat bg-cover" style="background-image: url(images/composition-beautiful-pink-flowers-plants.jpg);">
             <div id="current-list-name" class="w-fit h-fit border-b-2 border-black ml-16 mt-10"></div>
             <div id="current-list-todos">
             </div>
@@ -27,5 +27,7 @@
                 </div>
             </div>
         </div>
+
+        <!--Image by <a href="https://www.freepik.com/free-photo/composition-beautiful-pink-flowers-plants_3624597.htm#page=3&query=japanese%20cherry%20blossoms&position=40&from_view=search&track=ais">Freepik</a>-->
     </body>
 </html>
