added a clear completed button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
             <div class="bg-gray-300 rounded-b-lg" id="bottombox">
                 <div class="todo">
-                  <input id="enter" type="text" placeholder="Add a task to do." class="my-3 rounded-lg w-1/4 te">
+                  <input id="enter" type="text" placeholder="Add a task to do." class="my-3 rounded-lg w-1/4">
+                  <button id="clear" class="bg-white my-3 rounded-lg w-1/4 float-right border-2 border-black">Clear Completed</button>
                 </div>
             </div>
         </div>
