made it so the overflow of the page is hidden

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </ul>
             </div>
         </div>
-        <div class="w-full bg-no-repeat bg-cover" style="background-image: url(images/composition-beautiful-pink-flowers-plants.jpg);">
+        <div class="w-full  bg-cover overflow-y-auto max-h-screen" style="background-image: url(images/composition-beautiful-pink-flowers-plants.jpg);">
             <div id="current-list-name" class="w-fit h-fit border-b-2 border-black ml-16 mt-10"></div>
             <div id="current-list-todos">
                 <ul class="list-group-flush">
