--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do List</title>
         <link href="app.css" rel="stylesheet" type="text/css">
-        <script defer src="main.js"></script>
+        <script defer src="Javascript/main.js"></script>
         <script src="https://kit.fontawesome.com/0d1d579ea0.js" crossorigin="anonymous"></script>
     </head>
     <body class="flex flex-row h-screen  max-h-screen">
