--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do List</title>
-        <link href="app.css" rel="stylesheet" type="text/css">
+        <link href="CSS/app.css" rel="stylesheet" type="text/css">
         <script defer src="Javascript/main.js"></script>
         <script src="https://kit.fontawesome.com/0d1d579ea0.js" crossorigin="anonymous"></script>
     </head>
@@ -14,7 +14,7 @@
             <input type="text" id="userInput" placeholder="Create New List..." class="w-4/5 h-16 text-lg outline-none pl-5 my-10"></input>
             <div id="mainLists" class="w-full h-fit">
                 <ul class="list-group">
-                    <li class="list-group-item"><button id="" class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center px-10"><span class="relative"></span><button id="" class="trash relative left-full"><i class="fa-solid fa-trash"></i></button></button></li>
+                    <li class="list-group-item"><button class="list w-full bg-gray-300 h-14 text-2xl flex justify-center items-center px-10"><span class="relative"></span><button class="trash relative left-full"><i class="fa-solid fa-trash"></i></button></button></li>
                 </ul>
             </div>
         </section>
